# git-ls-files

./: CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  Dependencies.cmake  Install.cmake  Tests.cmake
src/: git_scanner.cpp  git_scanner.hpp  main.cpp
tests/: CMakeLists.txt  git_scanner_test.cpp
